# lazy-import

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  publish.yml  pytest.yml  tox.yml
lazy_import/: __init__.py  lazy_import.py
tests/: circular.py  heavy_lib.py  test_company.py  test_load_later.py  test_main.py  test_user.py
